test/known_problems/should_fail/rigid_type_variables_fail.erl
-module(rigid_type_variables_fail).

-compile([export_all, nowarn_export_all]).

-spec foo(A) -> A.
foo(X) -> {X, X}.
